[package]
name = "lsdp"
version = "0.2.1-alpha.0"
edition = "2021"
license = "WTFPL"
keywords = ["lenbrook", "discovery", "protocol"]
categories = ["parsing"]
description = "Lenbrook Service Discovery Protocol in Rust"
repository = "https://github.com/coral/lsdp"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
default-net = { version = "0.8.1", optional= true}
hex = "0.4.3"
netaddr2 = { version = "0.10.0", optional = true}
nom = "7.1.0"
thiserror = "1.0.30" 
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "net", "sync", "time"], optional = true }

[dev-dependencies]
anyhow = "1.0.53"

[features]
default = ["discover"]
discover = ["tokio", "default-net", "netaddr2"]
